# erdos-banger

./: .coderabbit.yaml  .env.example  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CANDIDATES.md  CLAUDE.md  FUTURE_IDEATIONS.md  MATH1-REPORT.md  Makefile  ONBOARDING.md  PROGRESS.md  PROMPT.md  README.md  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  deps.yml  pages.yml  release.yml
certkit/: emit_bounded_decide.py  emit_countermodel.py  lawlean.py  sieve647.py
certkit/lean/: Cert.lean  lake-manifest.json  lakefile.toml
commands/: erdos-ask.md  erdos-check.md  erdos-formalize.md  erdos-ingest.md  erdos-list.md  erdos-refs.md  erdos-search.md  erdos-setup.md  erdos-show.md  erdos-sync.md
data/: README.md
docs/: INDEX.md  index.md  master-draft.md  master-qualifications.md
docs/_archive/: future-ideations-2026-01-21.md
docs/_bugs/: README.md  bug-033-zbmath-search-identifier-404-not-handled.md  bug-035-lean-skeleton-outdated-import.md  bug-036-json-decode-error-handling.md  bug-037-hardcoded-logs-loop-path.md  bug-038-bm25-fts5-query-not-escaped.md  bug-039-ingest-no-search-discovery.md  bug-040-marker-cli-broken.md  bug-041-exa-not-exposed-in-cli.md  bug-042-aristotle-cli-friction.md  bug-042-exa-empty-titles.md  bug-043-pdfplumber-not-installed.md  bug-044-env-not-auto-loaded.md  bug-045-literature-papers-not-gitignored.md  bug-046-erdos-lean-command-broken.md  bug-047-pdf-converter-thread-unsafe-env.md  bug-049-aristotle-cli-friction.md  bug-050-enrichment-with-identifiers-stat-wrong.md  bug-051-manifest-bridge-doi-case-sensitive.md  bug-052-manifest-bridge-arxiv-version-not-normalized.md  bug-053-ingest-partial-failure-inconsistent-state.md  bug-054-arxiv-single-tex-gzip-extraction-failure.md  bug-055-ingest-url-only-refs-skipped.md  bug-056-exa-uses-neural-not-deep-search.md  bug-057-exa-cli-ignores-search-type-config.md  bug-058-arxiv-gzip-decompression-bomb.md  bug-gh035-json-decode-error-handling.md  friction-2026-01-26-aristotle-onboarding.md  friction-2026-01-26-cli-maximization-test.md
docs/_debt/: README.md  debt-092-proof-verification-loc.md  debt-097-prefer-arxiv-source-over-pdf.md  debt-098-ask-no-response-persistence.md  debt-108-e2e-test-coverage-thin.md  debt-109-ask-rag-prompt-budgeting.md  debt-110-ingest-discovery-mode.md  debt-111-skill-invocation-discipline.md  debt-112-prefer-arxiv-source-over-pdf.md  debt-113-ask-response-persistence.md  debt-114-hardcoded-relative-paths.md  debt-115-formal-lean-relative-paths.md  debt-116-timeout-constants-fragmented.md  debt-117-db-connection-error-handling.md  debt-118-proof-url-validation-incomplete.md  debt-119-spec036-loc-violations.md  debt-120-test-suite-startup-latency.md  debt-121-literature-path-convention-drift.md  debt-122-ingest-fetch-module-size.md  debt-123-llm-router-bypasses-appconfig.md  debt-124-test-over-mocking-patterns.md  debt-125-missing-test-edge-cases.md
docs/_ralphwiggum/: GUARDRAILS.md  LAUNCH_CHECKLIST.md  protocol.md
docs/_specs/: README.md  master-qualifications.md  master-vision.md  spec-036-lead-enrichment-pipeline.md  spec-037-math-exploration-cli.md
docs/_vendor-docs/: README.md
docs/adr/: README.md  adr-001-metadata-provider-orchestration.md  adr-002-bounded-contexts-and-composition-root.md  adr-003-sqlite-fts5-search-index.md
docs/architecture/: cli.md  data-pipeline.md  overview.md  rag-system.md
docs/bugs/: README.md  adversarial-review-2026-01-17.md  adversarial-review-2026-01-21.md  bug-001-typer-clirunner-mix-stderr.md  bug-002-search-build-index-json-stdout.md  bug-003-search-fts-loader-missing.md  bug-004-iter-problems-duplicate-ids.md  bug-005-dead-global-flags.md  bug-006-ruff-lints-submodule.md  bug-007-missing-requests-dependency.md  bug-013-log-level-dead-code.md  bug-014-silent-exception-swallowing.md  bug-015-array-index-bounds.md  bug-016-manifest-corruption-silent.md  bug-017-lean-runner-none-output.md  bug-018-openalex-client-broken.md  bug-019-convert-format-no-op.md  bug-021-ingest-openalex-mailto-timeout-ignored.md  bug-022-ingest-pdf-flags-silently-ignored.md
docs/debt/: README.md  debt-001-spec-005-ssot-drift.md  debt-002-spec-006-search-cli-drift.md  debt-003-spec-008-fixtures-incomplete.md  debt-004-lean-scaffolding-missing.md  debt-005-placeholder-tests.md  debt-006-ephemeral-test-data.md  debt-007-lean-ci-never-runs.md  debt-008-unused-golden-fixtures.md  debt-009-upstream-data-not-integrated.md  debt-010-no-smoke-test.md  debt-012-broad-exception-handling.md  debt-015-minor-style-debt.md  debt-016-srp-models-violation.md  debt-017-function-length-violations.md  debt-018-dry-violations.md  debt-019-dependency-inversion-violations.md  debt-020-magic-numbers-and-naming.md  debt-021-missing-abstractions.md  debt-022-large-core-modules-srp.md  debt-023-security-lint-suppressions.md  debt-024-placeholder-metadata-identifiers.md  debt-025-shell-llm-wrapper-duplication.md  debt-026-long-functions-remain.md  debt-026-no-logging-usage.md  debt-027-broad-exception-catches.md  debt-027-redundant-json-flag.md  debt-028-ingest-manifest-churn.md  debt-028-no-api-rate-limiting.md  debt-029-http-response-not-closed.md  debt-029-no-logging-usage.md  debt-030-no-retry-logic.md  debt-030-redundant-json-flag.md  (+69 more)
formal/: README.md
scripts/: audit_code_health.py  burling_sqrt_counterexample.py  cayley_z2_sqrt_test.py  ebip_chromatic_extremal_search.py  ebip_sat_search.py  ebip_utils.py  edge_graph_g0_sqrt_test.py  erdos_home_setup.sh  generate_cli_reference.py  hasse_poset_test.py  hasse_projection_sweep.py  kneser_graph_sqrt_test.py  layered_bipartite_test.py  llm-anthropic.sh  llm-mock.sh  llm-openai.sh  llm.sh  mycielski_sqrt_test.py  ordered_edge_graph_sqrt_test.py  paley_graph_sqrt_test.py  ralph-loop.sh  ralph-watchdog.sh  shift_graph_sqrt_test.py  smoke-test.sh  specker_graph_sqrt_test.py  twincut_sqrt_test.py  verify_counterexample_candidates.py
tests/: cli_runner.py  conftest.py  test_cli_structure.py  test_test_infrastructure.py  test_tooling.py
(+1153 files in other folders)
