[project]
name = "erdos-banger"
version = "0.1.0"
description = "CLI toolkit for Erdős problem research"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "The-Obstacle-Is-The-Way" }
]
keywords = ["erdos", "mathematics", "lean", "theorem-proving", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "typer>=0.21.1",
    "rich>=14.2.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "jinja2>=3.1.6",
    "requests>=2.32.5",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
pdf = [
    "marker-pdf>=1.0.0",  # GPL - see SPEC-019 for license rationale
]

[project.scripts]
erdos = "erdos.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/erdos"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-watch>=4.2.0",
    "pytest-sugar>=1.0.0",
    "hypothesis>=6.150.2",
    "ruff>=0.14.13",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "responses>=0.25.8",
    "bandit>=1.8.0",
    "types-PyYAML>=6.0.12.20250915",
    "types-requests>=2.32.0",
    "types-defusedxml>=0.7.0.20240218",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]
extend-exclude = ["data/erdosproblems"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TC",     # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "S",      # flake8-bandit (security)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "PLR0913", # too many arguments (sometimes necessary)
    "PLR2004", # magic value comparison (too noisy)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # Unused arguments OK in tests (fixtures)
    "S101",   # assert OK in tests
    "PLR2004", # Magic values OK in tests
    "TC003",  # TYPE_CHECKING imports fine in tests
    "PTH109", # os.getcwd() fine in tests for chdir context managers
]

[tool.ruff.lint.isort]
known-first-party = ["erdos"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
implicit_optional = false
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # Test functions don't need full typing
disallow_incomplete_defs = false  # Fixtures often omit arg annotations

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-v",                       # Verbose: show test names
    "-ra",                      # Show extra summary for all except passed
    "--tb=short",               # Shorter tracebacks
    "--strict-markers",         # Error on unknown markers
    "--strict-config",          # Error on config issues
    "--import-mode=importlib",  # Modern import mode for src layout
    "--color=yes",              # Force color output
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests requiring full environment",
    "requires_lean: tests that need Lean installed",
    "requires_network: tests that need network access",
]
filterwarnings = [
    "error",                    # Treat warnings as errors
    "ignore::DeprecationWarning:hypothesis.*",
]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
fail_under = 80
show_missing = true
